--- a/index.html
+++ b/index.html
@@ -747,25 +747,25 @@
                     <i class="fas fa-store"></i> SHOP <i class="fas fa-chevron-down"></i>
                 </button>
                 <div class="shop-dropdown-content">
-                    <a href="https://www.shopburaq.com/shop/jackets" class="dropdown-link">
+                    <a href="https://www.shopburaq.com/shop" class="dropdown-link">
                         <i class="fas fa-vest"></i> JACKETS
                     </a>
-                    <a href="https://www.shopburaq.com/shop/t-shirts" class="dropdown-link">
+                    <a href="https://www.shopburaq.com/shop" class="dropdown-link">
                         <i class="fas fa-tshirt"></i> T-SHIRTS
                     </a>
-                    <a href="https://www.shopburaq.com/shop/pants" class="dropdown-link">
+                    <a href="https://www.shopburaq.com/shop" class="dropdown-link">
                         <i class="fas fa-user"></i> PANTS
                     </a>
                     <a href="https://www.shopburaq.com/shop/accessories" class="dropdown-link">
                         <i class="fas fa-glasses"></i> ACCESSORIES
                     </a>
-                    <a href="https://www.shopburaq.com/shop/nft-collection" class="dropdown-link">
+                    <a href="https://www.shopburaq.com/nft-collection" class="dropdown-link">
                         <i class="fas fa-coins"></i> NFT COLLECTION
                     </a>
-                    <a href="https://www.shopburaq.com/shop/new-arrivals" class="dropdown-link">
+                    <a href="https://www.shopburaq.com/shop" class="dropdown-link">
                         <i class="fas fa-star"></i> NEW ARRIVALS
                     </a>
-                    <a href="https://www.shopburaq.com/shop/sale" class="dropdown-link">
+                    <a href="https://www.shopburaq.com/shop" class="dropdown-link">
                         <i class="fas fa-tag"></i> SALE
                     </a>
                 </div>
