--- a/shop.html
+++ b/shop.html
@@ -477,7 +477,7 @@
         }
         
         .sold-out-option::after {
-            content: "SOLD OUT";
+            content: "ALL PREDESIGNED SOLD OUT CUSTOM VIP AVAILABLE";
             position: absolute;
             top: 50%;
             left: 50%;
@@ -734,7 +734,7 @@
             <div class="product-image">
                 <img src="motorbikehoodie.png" alt="Motorbike Hoodie" class="product-img">
                 <div class="product-badge">NFT READY</div>
-                <div class="sold-out-badge">SOLD OUT</div>
+                <div class="sold-out-badge">ONLY CUSTOM AND ART AVAILABLE</div>
             </div>
             <div class="product-content">
                 <h3 class="product-title">MOTORBIKE HOODIE</h3>
@@ -810,7 +810,7 @@
             <div class="product-image">
                 <img src="tacticalvest.png" alt="Black Tactical Vest" class="product-img">
                 <div class="product-badge">TACTICAL GEAR</div>
-                <div class="sold-out-badge">SOLD OUT</div>
+                <div class="sold-out-badge">ONLY CUSTOM AND ART AVAILABLE</div>
             </div>
             <div class="product-content">
                 <h3 class="product-title">BLACK TACTICAL VEST</h3>
@@ -886,7 +886,7 @@
             <div class="product-image">
                 <img src="jeansvest.png" alt="Jeans Motorbike Vest" class="product-img">
                 <div class="product-badge">VINTAGE CYBER</div>
-                <div class="sold-out-badge">SOLD OUT</div>
+                <div class="sold-out-badge">ONLY CUSTOM AND ART AVAILABLE</div>
             </div>
             <div class="product-content">
                 <h3 class="product-title">JEANS MOTORBIKE VEST</h3>
@@ -962,7 +962,7 @@
             <div class="product-image">
                 <img src="blacktshirt.png" alt="Black T-Shirt" class="product-img">
                 <div class="product-badge">BASIC EDITION</div>
-                <div class="sold-out-badge">SOLD OUT</div>
+                <div class="sold-out-badge">ONLY CUSTOM AND ART AVAILABLE</div>
             </div>
             <div class="product-content">
                 <h3 class="product-title">BLACK T-SHIRT</h3>
@@ -1038,7 +1038,7 @@
             <div class="product-image">
                 <img src="whitetshirt.png" alt="White T-Shirt" class="product-img">
                 <div class="product-badge">CANVAS READY</div>
-                <div class="sold-out-badge">SOLD OUT</div>
+                <div class="sold-out-badge">ONLY CUSTOM AND ART AVAILABLE</div>
             </div>
             <div class="product-content">
                 <h3 class="product-title">WHITE T-SHIRT</h3>
@@ -1114,7 +1114,7 @@
             <div class="product-image">
                 <img src="cyberhoodie.png" alt="Cyber Hoodie with LED Lights" class="product-img">
                 <div class="product-badge">LED LIGHTS</div>
-                <div class="sold-out-badge">SOLD OUT</div>
+                <div class="sold-out-badge">ONLY CUSTOM AND ART AVAILABLE</div>
             </div>
             <div class="product-content">
                 <h3 class="product-title">CYBER HOODIE WITH LED</h3>
