--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
         <div class="nav-links">
             <a href="https://www.shopburaq.com/collection" class="nav-link">COLLECTION</a>
             <a href="https://www.shopburaq.com/about" class="nav-link">ABOUT</a>
-            <a href="https://www.shopburaq.com/contact" class="nav-link">CONTACT</a>
+            <a href="https://form.jotform.com/223047833165455" class="nav-link">CONTACT</a>
             
             <!-- SHOP DROPDOWN (RESTORED) -->
             <div class="shop-dropdown">
