--- a/shop.html
+++ b/shop.html
@@ -870,6 +870,15 @@
         <p class="shop-subtitle">
             Each garment is a canvas. Choose from our exclusive designs, upload your own art, 
             or collaborate with our artists to create unique cyberpunk fashion integrated with blockchain technology.
+            <div class="terms-notice">
+    <i class="fas fa-shield-alt"></i>
+    <span>
+        <strong>Important:</strong> By placing an order, you agree to our 
+        <a href="terms&conditions" target="_blank" rel="noopener noreferrer">Terms & Conditions</a>. 
+        All items are <strong>pre-owned vintage</strong>. International buyers are responsible for 
+        <strong>customs duties & import compliance</strong>.
+    </span>
+         </div>
         </p>
     </section>
     
