--- a/index.html
+++ b/index.html
@@ -816,6 +816,15 @@
             Where cyberpunk fashion meets blockchain technology. 
             Each garment is a token, each token tells a story. 
             Navigate the digital currents with us.
+            <div class="terms-notice">
+    <i class="fas fa-shield-alt"></i>
+    <span>
+        <strong>Important:</strong> By placing an order, you agree to our 
+        <a href="terms&conditions" target="_blank" rel="noopener noreferrer">Terms & Conditions</a>. 
+        All items are <strong>pre-owned vintage</strong>. International buyers are responsible for 
+        <strong>customs duties & import compliance</strong>.
+    </span>
+         </div>
         </p>
         <div class="button-grid">
             <a href="https://www.shopburaq.com/shop" class="btn btn-primary" id="exploreShop">
